--- a/base_di_partenza/articolo.html
+++ b/base_di_partenza/articolo.html
@@ -32,10 +32,10 @@
 
     <main>
       <article class="clearfix">
-        <h1>Come creare un template per i post</h1>
-        <div class="box1">
-          <img src="./assets/img/underline.svg" />
-        </div>
+        <h1>
+          Come creare un <span>template per i post<img src="./assets/img/underline.svg" /></span>
+        </h1>
+
         <p>
           <i class="fas fa-pen-square"></i> di Mario Rossi - <span><i class="fas fa-clock"></i> pubblicato il 25-10-2020</span>
         </p>
@@ -158,5 +158,12 @@
         <a href="mailto:info@epicode.school" title="contattami per informazioni/lavoro/privacy">info@epicode.school</a>
       </address>
     </footer>
+    <div class="social">
+      <a href="https://www.facebook.com" target="_blank"><i class="far fa-plus-square"></i></a>
+      <a href="https://calendar.google.com"><i class="far fa-calendar-alt"></i></a>
+    </div>
+    <div class="toTop">
+      <a href="#top"><i class="far fa-caret-square-up"></i></a>
+    </div>
   </body>
 </html>
